打包后,图片和自定义字体引入文件路径问题解决

--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,4 +1,5 @@
 @font-face{
     font-family:"PuHuiTi";
-    src: url("./font/Alibaba-PuHuiTi-Regular.ttf");
+    /* src: url("./font/Alibaba-PuHuiTi-Regular.ttf"); */
+    src: url("../style/font/Alibaba-PuHuiTi-Regular.ttf"); 
 }
