--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,5 +1,5 @@
 @font-face{
     font-family:"PuHuiTi";
-    /* src: url("./font/Alibaba-PuHuiTi-Regular.ttf"); */
+    src: url('../style/font/Alibaba-PuHuiTi-Bold.ttf');
     src: url("../style/font/Alibaba-PuHuiTi-Regular.ttf"); 
 }
